--- a/style.css
+++ b/style.css
@@ -250,3 +250,65 @@ section {
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(to bottom, rgb(0, 157, 255), rgb(255, 0, 255));
 }
+
+/* Projetos Section Code */
+
+.projeto-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));  
+    gap: 2rem;
+}
+
+.projeto-card img {
+    width: 21vw;
+    height: 25vh;
+    border-radius: 1rem;
+}
+.imgproj1 {
+    box-shadow: 0px 0px 0px 3px orange;
+}
+.imgproj2 {
+    box-shadow: 0px 0px 0px 3px blue;
+}
+.imgproj3 {
+    box-shadow: 0px 0px 0px 3px yellow;
+}
+
+.projeto-card {
+    padding: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.5rem;
+    border: 2px solid #000;
+    border-radius: 3rem;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+
+
+.projeto-card:hover {
+    background-color: #000;
+    color: #fff;
+    transform: translateY(-7px)scale(1.02);
+}
+
+
+.projeto-card:hover .btn {
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+
+.projeto-card:hover .btn:hover {
+    border: 2px solid #fff;
+    background-color: #fff;
+    color: #000;
+}
+
+.projeto-card h3 {
+    font-size: 2rem;
+    font-weight: 500;
+}
