--- a/style.css
+++ b/style.css
@@ -331,6 +331,9 @@ section {
 .projeto-card h3 {
     font-size: 2rem;
     font-weight: 500;
+    background: linear-gradient(to right, rgb(0, 157, 255), rgb(255, 0, 255));
+    background-clip: text;
+    color: transparent;
 }
 
 /* Contato Section Code */ 
