--- a/style.css
+++ b/style.css
@@ -37,14 +37,14 @@ header {
 }
 
 header::after {
-content: "";
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 5px; /* altura da faixa degradê */
-background: linear-gradient(to right, #3700da, #e91e2c); /* azul para vermelho */
-z-index: -1;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(to right, #3700da, #e91e2c);
+    z-index: -1;
 }
 
 nav {
@@ -58,61 +58,38 @@ nav {
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--primary);
-   
 }
 
 .logo:hover {
     color: #e91e2c;
-    cursor:cell;
+    cursor: cell;
 }
 
 .nav-links {
-display: flex;
-gap: 30px;
+    display: flex;
+    gap: 30px;
 }
 
 .nav-links a {
-position: relative;
-text-decoration: none;
-color: var(--dark);
-font-weight: 500;
-padding: 5px 0;
-transition: color 0.3s;
+    position: relative;
+    text-decoration: none;
+    color: var(--dark);
+    font-weight: 500;
+    padding: 5px 0;
+    transition: color 0.3s;
 }
 
 .nav-links a i {
-margin-right: 6px;
+    margin-right: 6px;
 }
 
-/* Efeito da barrinha colorida no hover */
-.nav-links a::after {
-content: "";
-position: absolute;
-left: 0;
-bottom: 0;
-width: 100%;
-height: 3px;
-background-color: #e91e2c;
-transform: scaleX(0);
-transform-origin: left;
-transition: transform 0.3s ease;
-}
-
-.nav-links a:hover::after {
-transform: scaleX(1);
-}
-
-.nav-links a:hover {
-color: var(--primary);
-}
-
+/* botão de menu escondido no desktop */
 .mobile-menu-btn {
     display: none;
     background: none;
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-    color: var(--dark);
 }
 
 /* Hero Section */
@@ -592,9 +569,21 @@ footer {
 
 @media (max-width: 768px) {
     .nav-links {
-        display: none;
+            position: absolute;
+            top: 80px;
+            right: 20px;
+            background: white;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            display: none;
+        }
+        .nav-links.active {
+            display: flex;
+        }    
     }
-    
     .mobile-menu-btn {
         display: block;
     }
@@ -606,9 +595,15 @@ footer {
     .section-title h2 {
         font-size: 2rem;
     }
-}
+
 
 @media (max-width: 576px) {
+
+    .nav-links {
+        width: 90%;
+        right:5%;
+    }
+
     .hero-btns {
         flex-direction: column;
         align-items: center;
@@ -616,5 +611,11 @@ footer {
     
     .projects-container {
         grid-template-columns: 1fr;
+    }
+    .section-title {
+        padding-bottom: 50px;
+    }
+    .timeline-item {
+        margin-top: 30px;
     }
 }
